@@ -24,11 +24,15 @@ $insert.control("errInfo")
 		</tr>
 		<tr>
 			<td width="100">Unmapped</td>
-			<td>$insert.control("chkOptions")</td>
+			<td>$insert.control("chkOnUnmapped")</td>
 		</tr>
 		<tr>
 			<td width="100">Element</td>
 			<td>$insert.control("elmSelector")</td>
+		</tr>
+		<tr>
+			<td width="100">Options</td>
+			<td>$insert.control("chkOptions")</td>
 		</tr>
 	</table>
    </td>
